# vend-a-shoe

./: .env.local.example  .gitignore  README.md  package-lock.json  package.json  pi-worker.service  pi_worker.py  servo_motor.py  supabase.sql  tailwind.config.js  tsconfig.json
.vercel/: project.json
Desktop/Calendar Copilot/: .env.desktop.example  .env.example  .gitignore  INSTALLABLE_MVP.md  README.md  package-lock.json  package.json
Desktop/Calendar Copilot/desktop-shell/: index.html
Desktop/Calendar Copilot/scripts/: build-desktop-dist.mjs
Desktop/Calendar Copilot/scripts/desktop/: build-shell.mjs  package-macos-pkg.mjs  prepare-release.mjs  release.mjs
Desktop/Calendar Copilot/src-tauri/: Cargo.toml  build.rs  entitlements.mac.plist  tauri.conf.json
Desktop/Calendar Copilot/src-tauri/src/: lib.rs  main.rs
Desktop/Calendar Copilot/src/app/: globals.css  layout.tsx  page.tsx
Desktop/Calendar Copilot/src/lib/ai/: chained-extractor.ts  extractor.ts  openai-extractor.ts  rule-based-extractor.ts
Desktop/Calendar Copilot/src/lib/calendar/: google-calendar.ts
Desktop/Calendar Copilot/src/lib/desktop/: background-watcher.ts  client.ts  contracts.ts  tauri-bridge.ts
Desktop/Calendar Copilot/src/lib/domain/: types.ts
Desktop/Calendar Copilot/src/lib/integrations/: contracts.ts
Desktop/Calendar Copilot/src/lib/pipeline/: process-message.ts
Desktop/Calendar Copilot/src/lib/server/: services.ts
Desktop/Calendar Copilot/src/lib/storage/: suggestions-store.ts
app/: globals.css  layout.tsx  page.tsx
(+9 files in other folders)
